Update the version of surefire